fix(Home.scss): change font color and spacing

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -28,6 +28,7 @@
         margin: 1.6rem 0;
         text-transform: capitalize;
         text-align: left;
+        color: $color-dark;
     }
     .food_item_container {
         display: flex;
@@ -35,5 +36,7 @@
         flex-direction: column;
         align-items: center;
         justify-items: center;
+        gap: 1rem;
+        margin-bottom: 1rem;
     }
 }
